--- a/smartcontactmanager/src/main/resources/templates/signup.html
+++ b/smartcontactmanager/src/main/resources/templates/signup.html
@@ -1,156 +1,88 @@
 <!DOCTYPE html>
-<html
-  lang="en"
-  xmlns:th="http://www.thymeleaf.org"
-  th:replace="~{base::layout(~{::section})}"
->
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-  <body>
-    <section>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 offset-md-3">
-            <div class="my-card mt-4">
-              <h1 class="text-center">Register here</h1>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{base::layout(~{::section})}">
 
-              <form
-                th:action="@{/registerUser}"
-                method="post"
-                th:object="${user}"
-              >
-                <!-- name -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
 
-                <div class="mb-3">
-                  <label for="name_field" class="form-label">Your name</label>
-                  <input
-                    required
-                    type="text"
-                    class="form-control"
-                    id="name_field"
-                    placeholder="Enter your name"
-                    name="name"
-                    th:value="${user.name}"
-                  />
-                </div>
+<body>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <div class="my-card mt-4">
+            <h1 class="text-center">Register here</h1>
 
-                <!-- email -->
-
-                <div class="mb-3">
-                  <label for="email_field" class="form-label">Your email</label>
-                  <input
-                    required
-                    type="email"
-                    class="form-control"
-                    id="email_field"
-                    placeholder="Enter your email"
-                    name="email"
-                    th:value="${user.email}"
-                  />
-                </div>
-
-                <!-- password -->
-                <div class="mb-3">
-                  <label for="password_field" class="form-label"
-                    >Password</label
-                  >
-                  <input
-                    required
-                    type="password"
-                    class="form-control"
-                    id="password_field"
-                    placeholder="Enter password"
-                    name="password"
-                  />
-                </div>
-
-                <!-- about -->
-                <div class="mb-3">
-                  <label for="about_field" class="form-label">About you</label>
-                  <textarea
-                    type="text"
-                    rows="5"
-                    class="form-control"
-                    id="about_field"
-                    placeholder="Enter about yourself"
-                    name="about"
-                    th:text="${user.about}"
-                  ></textarea>
-                </div>
-
-                <!-- terms and conditions -->
-                <div class="form-check mb-3">
-                  <label class="form-check-label" for="checkbox_field">
-                    <input
-                      class="form-check-input"
-                      type="checkbox"
-                      value=""
-                      id="checkbox_field"
-                    />
-                    Accept terms and conditions
-                  </label>
-                </div>
-
-                <div class="container text-center">
-                  <button
-                    type="submit"
-                    class="btn bg-primary text-light"
-                    data-bs-toggle="modal"
-                    data-bs-target="#staticBackdrop"
-                  >
-                    Submit
-                  </button>
-                  <button type="reset" class="btn btn-outline-danger">
-                    Reset
-                  </button>
-                </div>
-              </form>
+            <div th:if="${message}" th:classappend="${message.type}" th:text="${message.content}" class="alert"
+              role="alert">
             </div>
+
+            <form novalidate th:action="@{/registerUser}" method="post" th:object="${user}">
+              <!-- name -->
+
+              <div class="mb-3">
+                <label for="name_field" class="form-label">Your name</label>
+                <input type="text" class="form-control"
+                  th:classappend="${#fields.hasErrors('name') ? 'is-invalid' : ''}" id="name_field"
+                  placeholder="Enter your name" name="name" th:value="${user.name}" />
+
+                <div id="validationServer03Feedback" class="invalid-feedback" th:each="e : ${#fields.errors('name')}"
+                  th:text="${e}">
+                </div>
+              </div>
+
+              <!-- email -->
+
+              <div class="mb-3">
+                <label for="email_field" class="form-label">Your email</label>
+                <input type="email" class="form-control"
+                  th:classappend="${#fields.hasErrors('email') ? 'is-invalid' : ''}" id="email_field"
+                  placeholder="Enter your email" name="email" th:value="${user.email}" />
+
+                <div id="validationServer03Feedback" class="invalid-feedback" th:each="e : ${#fields.errors('email')}"
+                  th:text="${e}">
+                </div>
+              </div>
+
+              <!-- password -->
+              <div class="mb-3">
+                <label for="password_field" class="form-label">Password</label>
+                <input type="password" class="form-control"
+                  th:classappend="${#fields.hasErrors('password') ? 'is-invalid' : ''}" id="password_field"
+                  placeholder="Enter password" name="password" />
+
+                <div id="validationServer03Feedback" class="invalid-feedback"
+                  th:each="e : ${#fields.errors('password')}" th:text="${e}">
+                </div>
+              </div>
+
+              <!-- about -->
+              <div class="mb-3">
+                <label for="about_field" class="form-label">About you</label>
+                <textarea type="text" rows="5" class="form-control" id="about_field" placeholder="Enter about yourself"
+                  name="about" th:text="${user.about}"></textarea>
+              </div>
+
+              <!-- terms and conditions -->
+              <div class="form-check mb-3">
+                <label class="form-check-label" for="checkbox_field">
+                  <input class="form-check-input" type="checkbox" id="checkbox_field" name="tnc" />
+                  Accept terms and conditions
+                </label>
+              </div>
+
+              <div class="container text-center">
+                <button type="submit" class="btn bg-primary text-light">Submit</button>
+                <button type="reset" class="btn btn-outline-danger">Reset</button>
+              </div>
+            </form>
+
           </div>
         </div>
       </div>
+    </div>
+  </section>
+</body>
 
-      <!-- Modal -->
-      <div
-        class="modal fade"
-        id="staticBackdrop"
-        data-bs-backdrop="static"
-        data-bs-keyboard="false"
-        tabindex="-1"
-        aria-labelledby="staticBackdropLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5
-                class="modal-title"
-                id="staticBackdropLabel"
-                th:text="${session.message}"
-              ></h5>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
-            </div>
-            <div class="modal-body">...</div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal"
-              >
-                Close
-              </button>
-              <button type="button" class="btn btn-primary">Understood</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-  </body>
 </html>
