--- a/smartcontactmanager/src/main/resources/templates/about.html
+++ b/smartcontactmanager/src/main/resources/templates/about.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="base::layout(~{::section})">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{base::layout(~{::section})}">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
 </head>
+
 <body>
     <section>
         <div>This is about page</div>
     </section>
 </body>
+
 </html>
