--- a/smartcontactmanager/src/main/resources/templates/home.html
+++ b/smartcontactmanager/src/main/resources/templates/home.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="base::layout(~{::section})">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{base::layout(~{::section})}">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    
+
 </head>
+
 <body>
 
     <section class="banner d-flex justify-content-center align-items-center">
@@ -16,6 +18,7 @@
             <button class="btn bg-primary btn-lg text-white mt-3">Get start</button>
         </div>
     </section>
-    
+
 </body>
+
 </html>
