usign principle interface of spring security

--- a/smartcontactmanager/src/main/resources/templates/login.html
+++ b/smartcontactmanager/src/main/resources/templates/login.html
@@ -49,6 +49,8 @@
                                 </div>
                             </div>
 
+                            <a class="float-end" th:href="@{/signup}">Register here</a>
+
                             <div class="container text-center">
                                 <button type="submit" class="btn bg-primary text-light">Submit</button>
                                 <button type="reset" class="btn btn-outline-danger">Reset</button>
