--- a/smartcontactmanager/src/main/resources/templates/normal/user-dashboard.html
+++ b/smartcontactmanager/src/main/resources/templates/normal/user-dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{normal/base::layout(~{::section})}">
 
 <head>
     <meta charset="UTF-8">
@@ -8,8 +8,11 @@
 </head>
 
 <body>
-    <h1>Welcome!</h1>
-    <h4>Your private dashboard</h4>
+    <section>
+        <i onclick="toggleButton()" class="fa-solid fa-bars"></i>
+        <h1>Welcome!</h1>
+        <h4>Your private dashboard</h4>
+    </section>
 </body>
 
 </html>
