--- a/smartcontactmanager/src/main/resources/templates/normal/base.html
+++ b/smartcontactmanager/src/main/resources/templates/normal/base.html
@@ -20,7 +20,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Smart Contact Manager</a>
 
@@ -52,12 +52,13 @@
 
     <div class="close-btn"><i onclick="toggleButton()" class="fa-solid fa-xmark close"></i></div>
 
-    <a href="#" class="item"> <i class="me-2 fa-solid fa-house"></i> Home</a>
+    <a th:href="@{/user/dashboard}" class="item"> <i class="me-2 fa-solid fa-house"></i> Home</a>
     <a href="#" class="item"> <i class="me-2 fa-solid fa-address-book"></i> View contacts</a>
-    <a href="#" class="item"> <i class="me-2 fa-solid fa-notes-medical"></i> Add contacts</a>
+    <a th:href="@{/user/add-contact}" class="item"> <i class="me-2 fa-solid fa-notes-medical"></i> Add
+      contacts</a>
     <a href="#" class="item"> <i class="me-2 fa-solid fa-user"></i> Your profile</a>
     <a href="#" class="item"> <i class="me-2 fa-solid fa-gear"></i> Settings</a>
-    <a href="#" class="item"> <i class="me-2 fa-solid fa-arrow-right-from-bracket"></i> Logout</a>
+    <a th:href="@{/logout}" class="item"> <i class="me-2 fa-solid fa-arrow-right-from-bracket"></i> Logout</a>
     <div class="border-bottom"></div>
   </div>
 
