--- a/smartcontactmanager/src/main/resources/templates/normal/user-dashboard.html
+++ b/smartcontactmanager/src/main/resources/templates/normal/user-dashboard.html
@@ -9,7 +9,7 @@
 
 <body>
     <section>
-        <i onclick="toggleButton()" class="fa-solid fa-bars"></i>
+        <div class="closeHam"><i onclick="toggleButton()" class="fa-solid fa-bars close"></i></div>
         <h1>Welcome!</h1>
         <h4>Your private dashboard</h4>
     </section>
