--- a/smartcontactmanager/src/main/resources/templates/normal/base.html
+++ b/smartcontactmanager/src/main/resources/templates/normal/base.html
@@ -54,7 +54,7 @@
 
     <a th:href="@{/user/dashboard}" class="item"> <i class="me-2 fa-solid fa-house"></i> Home</a>
     <a href="#" class="item"> <i class="me-2 fa-solid fa-address-book"></i> View contacts</a>
-    <a th:href="@{/user/add-contact}" class="item"> <i class="me-2 fa-solid fa-notes-medical"></i> Add
+    <a th:href="@{/user/addContact}" class="item"> <i class="me-2 fa-solid fa-notes-medical"></i> Add
       contacts</a>
     <a href="#" class="item"> <i class="me-2 fa-solid fa-user"></i> Your profile</a>
     <a href="#" class="item"> <i class="me-2 fa-solid fa-gear"></i> Settings</a>
