--- a/smartcontactmanager/src/main/resources/templates/normal/base.html
+++ b/smartcontactmanager/src/main/resources/templates/normal/base.html
@@ -53,7 +53,7 @@
     <div class="close-btn"><i onclick="toggleButton()" class="fa-solid fa-xmark close"></i></div>
 
     <a th:href="@{/user/dashboard}" class="item"> <i class="me-2 fa-solid fa-house"></i> Home</a>
-    <a th:href="@{/user/showContacts}" class="item"> <i class="me-2 fa-solid fa-address-book"></i> View contacts</a>
+    <a th:href="@{/user/showContacts/0}" class="item"> <i class="me-2 fa-solid fa-address-book"></i> View contacts</a>
     <a th:href="@{/user/addContact}" class="item"> <i class="me-2 fa-solid fa-notes-medical"></i> Add
       contacts</a>
     <a href="#" class="item"> <i class="me-2 fa-solid fa-user"></i> Your profile</a>
