--- a/smartcontactmanager/src/main/resources/templates/base.html
+++ b/smartcontactmanager/src/main/resources/templates/base.html
@@ -27,7 +27,7 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-uppercase">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" th:href="@{/}">Home</a>
           </li>
