--- a/smartcontactmanager/src/main/resources/templates/normal/edit_contact_form.html
+++ b/smartcontactmanager/src/main/resources/templates/normal/edit_contact_form.html
@@ -28,7 +28,7 @@
                             </div>
                         </div>
 
-                        <form novalidate th:action="@{/user/addContact}" method="post" th:object="${contact}"
+                        <form novalidate th:action="@{/user/updateContact}" method="post" th:object="${contact}"
                             enctype="multipart/form-data">
 
                             <!-- contact id  --> <!-- Will only filld in case of edit -->
@@ -104,7 +104,7 @@
                             <!-- about -->
                             <div class="form-floating mb-3">
                                 <textarea class="form-control" placeholder="Enter work description" id="mytextarea"
-                                    style="height: 100px" th:text="${contact.description}"
+                                    rows="5" style="height: 100px" th:text="${contact.description}"
                                     name="description"></textarea>
                             </div>
 
@@ -112,8 +112,7 @@
 
                             <div class="container text-center">
                                 <button type="submit" class="btn bg-primary text-light">Update</button>
-                                <a th:href="@{'/user/delete/' + ${contact.cId}}"
-                                    class="btn btn-outline-danger">Delete</a>
+                                <a th:onclick="|deleteAlert(${contact.cId})|" class="btn btn-outline-danger">Delete</a>
                             </div>
                         </form>
 
@@ -126,7 +125,8 @@
             </div>
         </div>
         <script src="https://cdn.tiny.cloud/1/p43jetttix5kbmowxgl220tarqr3t5huj5sad0az3iokigqx/tinymce/7/tinymce.min.js"
-            referrerpolicy="origin"></script>
+            referrerpolicy="origin">
+            </script>
         <script>
             tinymce.init({
                 selector: '#mytextarea'
