--- a/smartcontactmanager/src/main/resources/templates/normal/show_contacts.html
+++ b/smartcontactmanager/src/main/resources/templates/normal/show_contacts.html
@@ -46,7 +46,7 @@
                                     </td>
                                     <td class="align-middle" th:text="${c.phone}"></td>
                                     <td class="align-middle text-center">
-                                        <form th:action="@{'/user/edit/' + ${c.cId}}" method="post">
+                                        <form th:action="@{'/user/contact/edit/' + ${c.cId}}" method="post">
                                             <button type="submit" class="btn"> <i
                                                     class="fa-regular fa-pen-to-square"></i>
                                             </button>
