--- a/smartcontactmanager/src/main/resources/templates/normal/base.html
+++ b/smartcontactmanager/src/main/resources/templates/normal/base.html
@@ -56,7 +56,7 @@
     <a th:href="@{/user/showContacts/0}" class="item"> <i class="me-2 fa-solid fa-address-book"></i> View contacts</a>
     <a th:href="@{/user/addContact}" class="item"> <i class="me-2 fa-solid fa-notes-medical"></i> Add
       contacts</a>
-    <a href="#" class="item"> <i class="me-2 fa-solid fa-user"></i> Your profile</a>
+    <a th:href="@{/user/profile}" class="item"> <i class="me-2 fa-solid fa-user"></i> Your profile</a>
     <a href="#" class="item"> <i class="me-2 fa-solid fa-gear"></i> Settings</a>
     <a th:href="@{/logout}" class="item"> <i class="me-2 fa-solid fa-arrow-right-from-bracket"></i> Logout</a>
     <div class="border-bottom"></div>
