--- a/smartcontactmanager/src/main/resources/templates/normal/user-dashboard.html
+++ b/smartcontactmanager/src/main/resources/templates/normal/user-dashboard.html
@@ -9,9 +9,21 @@
 
 <body>
     <section>
-        <div class="closeHam"><i onclick="toggleButton()" class="fa-solid fa-bars close"></i></div>
-        <h1>Welcome!</h1>
-        <h4>Your private dashboard</h4>
+        <div class="closeHam">
+            <i onclick="toggleButton()" class="fa-solid fa-bars close"></i>
+        </div>
+
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 offset-md-1">
+                    <div class="my-card mt-4">
+                        <h1 class="text-center mb-3">Edit user details</h1>
+
+
+                    </div>
+                </div>
+            </div>
     </section>
 </body>
 
