--- a/smartcontactmanager/src/main/resources/static/css/styles.css
+++ b/smartcontactmanager/src/main/resources/static/css/styles.css
@@ -86,6 +86,21 @@ body {
   transform: scale(0.8);
 }
 
+/* Search bar */
+
+.search-container {
+  position: relative;
+}
+
+.search-result {
+  position: absolute;
+  border: 1px solid gray;
+  background-color: white;
+  padding: 0.9em;
+  width: 100%;
+  display: none;
+}
+
 @media only screen and (max-width: 600px) {
   .side-bar {
     display: none;
